# Meridian_LITE

./: .gitignore  .gitmodules  README.md
.github/workflows/: Build_Meridian_LITE_for_ESP32.yml  Check_PullRequest.yml  Create_ReleaseNote.yml  _WORKFLOW_CALL_RunningPlatformIO.yml
Meridian_LITE/: .clang-format  Doxyfile  Meridian_LITE.code-workspace  platformio.ini
Meridian_LITE/src/: config.h  keys.h  main.cpp  main.h  mrd_disp.h  mrd_sd.h  mrd_servo.h  mrd_util.h  mrd_wire0.h
Meridian_LITE_for_ESP32/: .gitignore  Doxyfile  Meridian_LITE_for_ESP32.code-workspace  platformio.ini
Meridian_LITE_for_ESP32/script/: no_skip.cmd  skip.cmd
Meridian_LITE_for_ESP32/scripts/: build_post.py  post_script.py  pre_script.py  setup.py
Meridian_LITE_for_ESP32/src/: config.h  keys.h  main.cpp  main.h  mrd_bt_pad.h  mrd_disp.h  mrd_eeprom.h  mrd_move.h  mrd_sd.h  mrd_servo.h  mrd_util.h  mrd_wifi.h  mrd_wire0.h
Meridian_LITE_for_PicoW/: CMakeLists.txt  Meridian_LITE_for_PicoW.code-workspace  Meridian_LITE_for_PicoW.cpp  main.cpp  source_file.cmake
Meridian_LITE_on_Arduino/: .clang-format  Doxyfile  Meridian_LITE_on_Arduino.code-workspace  TODO.md  platformio.ini
Meridian_LITE_on_Arduino/src/: ._system_key.hpp  config.h  keys.h  main.cpp  main.h  test_main.cpp
docs/: _config.yml  index.md
docs/_includes/: footer.html
docs/articles/: Meridian_LITE.md  build_and_upload.md  changelog.md  (+3 more)
lib/Meridian_Core/: CMakeLists.txt
lib/Meridian_Core/include/: Meridim90.hpp
lib/Meridian_Core/include/mrd_plugin/: i_mrd_plugin_i2c.hpp  i_mrd_plugin_joypad.hpp
lib/Meridian_Plugin_for_PicoSDK/: CMakeLists.txt
lib/Meridian_Plugin_for_PicoSDK/include/board/: fireflake_base_board_for_pico_w.hpp  meridian_board_lite_for_pico_w.hpp
lib/Meridian_Plugin_for_PicoSDK/include/mrd_module/ahrs/: mrd_imu_MPU6050.hpp  mrd_imu_MPU9250.hpp
lib/Meridian_Plugin_for_PicoSDK/include/mrd_module/gpio/: mrd_gpio_in.hpp
lib/Meridian_Plugin_for_PicoSDK/include/mrd_module/network/: mrd_wifi_esp32.hpp
lib/Meridian_Plugin_for_PicoSDK/include/mrd_module/servo/: mrd_servo_gs2d_on_kondo_ics.hpp
lib/Meridian_Plugin_for_PicoSDK/src/board/: fireflake_base_board_for_pico_w.cpp  meridian_board_lite_for_pico_w.cpp
(+324 files in other folders)
